# rs-mrtd1

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/apdu/command/: borrowed.rs  owned.rs
src/apdu/response/: owned.rs
src/auth/: bac.rs  mod.rs  pace.rs
src/crypto/: des.rs  kdf.rs  mod.rs  padding.rs  tdes.rs
src/files/: mod.rs
src/mrz/: borrowed.rs  check_digit.rs  error.rs  iter.rs  mod.rs  owned.rs
