[package]
name = "mrtd1"
version = "0.1.2"
description = "Helper utilities for communicating with eMRTDs / ePassports"
authors = ["Alexander Sagen <alexander@sagen.me>"]
repository = "https://github.com/alexrsagen/rs-mrtd"
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
vendored = ["nfc1/vendored"]
drivers = ["nfc1/drivers"]
logging = ["nfc1/logging"]
usb_logging = ["nfc1/usb_logging"]
conffiles = ["nfc1/conffiles"]
envvars = ["nfc1/envvars"]
driver_pcsc = ["nfc1/driver_pcsc"]
driver_acr122_pcsc = ["nfc1/driver_acr122_pcsc"]
driver_acr122_usb = ["nfc1/driver_acr122_usb"]
driver_acr122s = ["nfc1/driver_acr122s"]
driver_arygon = ["nfc1/driver_arygon"]
driver_pn532_uart = ["nfc1/driver_pn532_uart"]
driver_pn53x_usb = ["nfc1/driver_pn53x_usb"]
default_drivers = ["nfc1/default_drivers"]
default = ["vendored", "drivers", "default_drivers"]

[dependencies]
sha1 = "0.10"
sha2 = "0.10"
chrono = "0.4"
rand = "0.8"
cbc = "0.1"
des = "0.8"
block-padding = "0.3"
iso7816-tlv = "0.4"
hex_fmt = "0.3"
nfc1 = { version = "0.5", default-features = false, optional = true }